# perdus

./: .firebaserc  .gitignore  README.md  firebase.json
.github/workflows/: deploy.yml
backend/: .dockerignore  main.py  pyproject.toml  requirements.txt
backend/src/core/: auth.py  config.py  services.py
backend/src/routes/: inquiries.py  items.py  users.py
backend/src/services/: inquiries.py  items.py
marketing/: package-lock.json  package.json
marketing/app/: layout.tsx  page.tsx
webapp/: index.html  package-lock.json  package.json
webapp/src/: App.jsx  main.jsx
webapp/src/components/: PageTransition.jsx
webapp/src/components/sidebar/: PerdusSidebar.jsx
webapp/src/components/sidebar/nav-content/: AssistantNavContent.jsx  NavUser.jsx  PublicNavContent.jsx
webapp/src/components/stat-card/: StatCard.jsx
webapp/src/components/statuses/: InquiryStatus.jsx  ItemStatus.jsx
webapp/src/contexts/: AuthContext.jsx
webapp/src/lib/: firebase.js
webapp/src/pages/assistants/: AssistantsRouter.jsx
webapp/src/pages/assistants/pages/: Dashboard.jsx
webapp/src/pages/assistants/pages/inquiries/: InquiriesPage.jsx  Inquiry.jsx
webapp/src/pages/assistants/pages/objects/: NewObject.jsx  Object.jsx  ObjectsPage.jsx
webapp/src/pages/assistants/pages/settings/: SettingsPage.jsx
webapp/src/pages/auth/: Login.jsx
webapp/src/pages/public/: PublicRouter.jsx
webapp/src/pages/public/pages/: Lost.jsx  NewInquiryPage.jsx
webapp/src/pages/public/pages/inquiries/: InquiryDetail.jsx  (+1 more)
webapp/src/requests/: inquiries.js  objects.js  requests.js  users.js
